test/visibility/scoping-shadows-error-message.good
scoping-shadows-error-message.chpl:1: In function 'main':
scoping-shadows-error-message.chpl:11: error: 'a' used before defined
scoping-shadows-error-message.chpl:12: note: defined here
